Fix - code of conduct responsive on mobile

--- a/css/pages/coc.css
+++ b/css/pages/coc.css
@@ -21,8 +21,7 @@
     width: unset;
     text-align: left;
     font-weight: 400;
-    /* margin-left: -10%; */
-    padding: 20px;
+    /* padding: 20px; */
    }
    .coc-list-elements {
      padding: 5px;
